CHORE: replaced some resources

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="parenttext">
         <div class="groupfeatured">
             <div id="Featured"> Featured Photo</div>
-            <img src="./Images/Featured.png" class="image-style">
+            <img src="./Images/Website Logo.png" class="image-style">
         </div>
     
         <div class="groupproject">
@@ -116,7 +116,6 @@
                         <li>Photoshop</li>
                         <li>Premiere</li>
                         <li>Lightroom</li>
-                        <li>Magprito ng crispy na sunny side up</li>
                     </ul> 
                 </div>
             </div>
